> Feature Update: Added RSS feed brodcast into a specific group >Few Bug Fixes

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,12 @@ __pycache__/
 *.so
 
 #API Key File
-api_key.py
+secrets.py
+published_log.txt
+
+#testing File and residual files
+test.py
+aws_entry.txt
 
 # Distribution / packaging
 .Python
