--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 APScheduler==3.6.3
+astroid==2.5.1
+autopep8==1.5.5
 certifi==2020.12.5
 feedparser==6.0.2
+isort==5.7.0
+lazy-object-proxy==1.5.2
+mccabe==0.6.1
+pycodestyle==2.6.0
+pylint==2.7.2
 python-telegram-bot==13.3
 pytz==2021.1
 sgmllib3k==1.0.0
 six==1.15.0
+toml==0.10.2
 tornado==6.1
 tzlocal==2.1
+wrapt==1.12.1
