--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
 feedparser==6.0.8
 python-telegram-bot==13.7
+google-api-python-client==2.22.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.6
