--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,9 @@ updates:
         dependency-type: "direct"
       - dependency-name: "python-telegram-bot"
         dependency-type: "direct"
+      - dependency-name: "google-api-python-client"
+        dependency-type: "direct"
+      - dependency-name: "google-auth-httplib2"
+        dependency-type: "direct"
+      - dependency-name: "google-auth-oauthlib"
+        dependency-type: "direct"
