--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,5 @@
-[MASTER]
+[MAIN]
 disable=
-    C0114, # missing-module-docstring
-    W0613, #Unused argument 'context'
+    W0613, # Unused argument 'context' (unused-argument)
+    E1101, # Instance of 'Resource' has no 'events' member (no-member)
+    W0703  # Catching too general exception Exception (broad-except)
