--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -12,11 +12,12 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10.2
+        python-version: 3.10.4
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install -U pip wheel
+        pip install -U pylint
     - name: Analysing the code with pylint
       run: |
         pip install -r requirements.txt
